working on html

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
     <section class="site-container">
       <div class="specialities" id="exams">
           <div class="specialities_images">
-            <img src=".resources/images/paper-icon.png" alt="image of paper">
+            <img src="./resources/images/paper-icon.png" alt="image of paper">
           </div>
           <span>Comprehensive Exams</span>
         </div>
         <div class="specialities" id="fittings">
           <div class="specialities_images">
-            <img src=".resources/images/ruler_icon.png" alt="image of ruler">
+            <img src="./resources/images/ruler-icon.png" alt="image of ruler">
           </div>
           <span>Custom Fittings</span>
         </div>
         <div class="specialities" id="delivery">
           <div class="specialities_images">
-            <img src=".resources/images/truck-icon.png" alt="image of truck">
+            <img src="./resources/images/truck-icon.png" alt="image of truck">
           </div>
           <span>Fast Delivery</span>
         </div>
@@ -53,16 +53,30 @@
       </section>
 
       <!-- info section -->
-      <section class="info site-container">
-        <div class="philosophy">
 
+      <section class="site-container">
+        <div class="info">
+          <h4>PHILOSOPHY</h4>
+          <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
         </div>
 
-
-
+        <div class="info">
+          <h4>APPOINTMENTS</h4>
+          <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+        </div>
 
       </section>
 
+      <!-- footer -->
+
+      <footer>
+
+      <div class="site-container">
+        <img src="./resources/images/logo-black.png" alt="logo black">
+        <span>Copyright Tortoiseshell Optics</span>
+      </div>
+      
+    </footer>
 
   </body>
 </html>
